# sdl-nugem

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  character.cpp  character.h  game.cpp  game.h  input.cpp  input.h  main.c  main.cpp  negum.kdev4  platform.cpp  platform.h  scenefight.cpp  spritehandler.cpp  spritehandler.h
assets/shaders/: sprite.frag  sprite.vert
mugen/: mugenutils.cpp  mugenutils.h  sffv1.cpp  sffv1.h  sffv2.cpp  sffv2.h
src/: character.cpp  character.h  character.hpp  eventhandler.cpp  eventhandler.hpp  game.cpp  game.h  game.hpp  glgraphics.cpp  glgraphics.h  glgraphics.hpp  glsprite.cpp  glsprite.hpp  input.cpp  input.h  input.hpp  main.cpp  platform.cpp  platform.hpp  player.cpp  player.h  player.hpp  scene.cpp  scene.h  scene.hpp  scenefight.cpp  scenefight.h  sceneloader.cpp  sceneloader.hpp  scenemenu.cpp  scenemenu.h  scenemenu.hpp  spritehandler.cpp  spritehandler.h  stage.h  window.cpp  window.hpp
src/fight/: fight.cpp  fight.h  fight.hpp  fightcharacter.cpp  fightcharacter.hpp
src/glad/: glad.c  glad.h
src/mugen/: air.cpp  air.h  air.hpp  cmd.cpp  cmd.h  cmd.hpp  cns.cpp  cns.h  def.cpp  def.h  def.hpp  mugenutils.cpp  mugenutils.h  mugenutils.hpp  sffv1.cpp  sffv1.h  sffv1.hpp  sffv2.cpp  sffv2.h  sffv2.hpp  sprites.cpp  sprites.h  sprites.hpp  stage.cpp  stage.hpp  state.cpp  state.h  state.hpp
src/script/: script.h
