cmake_minimum_required(VERSION 3.7)
set(PROJECT nugem)
project(${PROJECT})


# Add global definitions
add_definitions("-Wall")
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")

add_executable(${PROJECT} ${SOURCE_FILES})
# Using C++14
set_property(TARGET ${PROJECT} PROPERTY CXX_STANDARD 14)
set_property(TARGET ${PROJECT} PROPERTY CXX_STANDARD_REQUIRED 14)

# Find SDL2
# https://cmake.org/cmake/help/latest/module/FindPkgConfig.html
INCLUDE(FindPkgConfig REQUIRED)
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)
PKG_CHECK_MODULES(SDL2_IMAGE REQUIRED SDL2_image)
PKG_CHECK_MODULES(GL REQUIRED gl)
PKG_CHECK_MODULES(GLEW REQUIRED glew)
PKG_CHECK_MODULES(GLM REQUIRED glm)
if (APPLE)
    PKG_CHECK_MODULES(GLU REQUIRED glut)
else()
    PKG_CHECK_MODULES(GLU REQUIRED glu)
endif ()

message("SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}
SDL2_IMAGE_INCLUDE_DIRS: ${SDL2_IMAGE_INCLUDE_DIRS}
GLEW_INCLUDE_DIRS: ${GLEW_INCLUDE_DIRS}
GL_INCLUDE_DIRS:${GL_INCLUDE_DIRS}
GLM_INCLUDE_DIRS: ${GLM_INCLUDE_DIRS}
GLU_INCLUDE_DIRS: ${GLU_INCLUDE_DIRS}
")
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${GL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLU_INCLUDE_DIRS})

message("SDL2_LINK_LIBRARIES: ${SDL2_LINK_LIBRARIES}
SDL2_IMAGE_LINK_LIBRARIES: ${SDL2_IMAGE_LINK_LIBRARIES}
GLEW_LINK_LIBRARIES: ${GLEW_LINK_LIBRARIES}
GL_LINK_LIBRARIES:${GL_LINK_LIBRARIES}
GLM_LINK_LIBRARIES: ${GLM_LINK_LIBRARIES}
GLU_LINK_LIBRARIES: ${GLU_LINK_LIBRARIES}")
target_link_libraries(${PROJECT} ${SDL2_LINK_LIBRARIES} ${SDL2_IMAGE_LINK_LIBRARIES} ${GL_LINK_LIBRARIES} ${GLEW_LINK_LIBRARIES} ${GLM_LINK_LIBRARIES} ${GLU_LINK_LIBRARIES})
install(TARGETS ${PROJECT} DESTINATION bin)
